# ECS-Framework

./: CMakeLists.txt  ECSframework.cpp  ECSframework.h  ECSframework.sln  ECSframework.vcxproj  ECSframework.vcxproj.filters  ecs_test.cpp  main.cpp
ecs_framework/: entity_component_systems_framework.h
ecs_framework/component_framework/: component_framework.h  component_manager_registry.h  component_manager_repository.h
ecs_framework/id_framework/: ECSID.h  ecs_id_manager.h  ecs_id_registery.h  iid_config.h
ecs_framework/utilities/: ECSID.h
src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ECSF.h  ECSframework.sln  ECSframework.vcxproj  ECSframework.vcxproj.filters  ECSframeworkLib.vcxproj  ECSframeworkLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  entity_component_systems_framework.h  settings.h
src/component_framework/: component_framework.h  component_manager.h  component_manager_factory.h  component_manager_registery.h  component_manager_registry.h  component_repository.h  icomponent.h  icomponent_factory.h
src/entity_framework/: entity.h  entity_factory.cpp  entity_factory.h  entity_repository.cpp  entity_repository.h  entity_serializer.h
src/id_framework/: ECSID.h  ecs_id_manager.h  ecs_id_registery.h  iid_config.h  is_valid_entity_id_type.h
src/modules/: TransformComponent.h
src/utilities/: ECSID.h  custom_hash.h
